--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Makes it easier to create custom Shopify email templates by allowing you to edit and compile them offline locally before copy/pasting them to Shopifies admin",
   "main": "index.js",
   "dependencies": {
+    "grunt": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-include-replace": "^5.0.0",
     "grunt-inline-css": "^0.1.5"
